--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,21 @@
 @import 'tailwindcss/components';
 
 @import 'tailwindcss/utilities'; */
+
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  overflow-x: hidden;
+}
+p {
+  color: #707070;
+}
+* {
+  font-family: "DM Sans", sans-serif;
+  padding: 0;
+  margin: 0;
+}
